include ${top_srcdir}/include/SEP.aux.rules
SUBDIRS=
EXTRA_DIST=seis_filter.html interact.html sepsu.html sep3d.html superset.html util_headers.html util_unix.html sepfft.html seis_travel.html graphics_vplot.html util_vector.html sepmath.html sepaux.html util_info.html sep.html seis_model.html seis_velan.html sep_graphics.html sepfilter.html seplib.html seis_image.html util_cube.html seis_dip.html septravel.html 

