include ${top_srcdir}/include/SEP.aux.rules
SUBDIRS=
EXTRA_DIST=util_info.pod sepaux.pod septravel.pod seis_velan.pod sep3d.pod sepmath.pod interact.pod seis_filter.pod sep.pod seplib.pod sepfft.pod sepsu.pod seis_travel.pod seis_model.pod seis_image.pod sepfilter.pod seis_dip.pod graphics_vplot.pod util_cube.pod sep_graphics.pod util_vector.pod util_unix.pod superset.pod util_headers.pod 

