

bin_PROGRAMS = Rickmovie

Rickmovie_SOURCES = sep_axis.c sep_color.c sep_colorbar.c sep_data.c sep_draw.c sep_edit.c sep_help.c \
sep_main.c sep_map.c sep_movie.c sep_pick.c sep_pik.c sep_plane.c sep_region.c sep_render.c sep_section.c \
sep_ui_canvas.c sep_ui_menu.c sep_ui_panel.c sep_ui_window.c sep_view.c \
data.h main.h pik.h region.h view.h axis.h draw.h map.h \
plane.h render.h xd.h color.h gridhd.h movie.h rargs.h section.h colorbar.h \
help.h pick.h rargsf.h ui.h

Rickmovie_LDADD = $(MYLIBS) $(TOOLKIT_LIBS) $(X_PRE_LIBS) -lm

